fix: rename project

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Can Badge Image Edit Tool</title>
-    <meta property="og:title" content="Can Badge Image Edit Tool" />
-    <meta name="twitter:title" content="Can Badge Image Edit Tool" />
-    <meta property="og:site_name" content="Can Badge Image Edit Tool" />
-    <link rel="canonical" href="https://hamproductions.github.io/can-badge-image-edit/" />
-    <meta property="og:url" content="https://hamproductions.github.io/can-badge-image-edit/" />
+    <title>Oshi Cropper</title>
+    <meta property="og:title" content="Oshi Cropper" />
+    <meta name="twitter:title" content="Oshi Cropper" />
+    <meta property="og:site_name" content="Oshi Cropper" />
+    <link rel="canonical" href="https://hamproductions.github.io/oshi-cropper/" />
+    <meta property="og:url" content="https://hamproductions.github.io/oshi-cropper/" />
     <meta property="og:description" content="ヒトリダケナンテエラベナイヨー" />
     <meta name="description" content="ヒトリダケナンテエラベナイヨー" />
     <meta name="twitter:description" content="ヒトリダケナンテエラベナイヨー" />
